{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 31,
  "lineage": "a9cffae5-fb79-0315-85b0-263a2486e7c9",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793291932898:network-acl/acl-0e90e4c75ef512f50",
            "default_network_acl_id": "acl-0e90e4c75ef512f50",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e90e4c75ef512f50",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "793291932898",
            "subnet_ids": [
              "subnet-00576749bc8495313",
              "subnet-03189eeb241b25df4",
              "subnet-0c2fa13d859c27bb0",
              "subnet-0e44af98e8d915964",
              "subnet-0ea214c749c22f39a",
              "subnet-0f84335fb5a118d3c"
            ],
            "tags": {
              "Environment": "staging",
              "Name": "vpc-fritz-default",
              "Owner": "Fritz"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "vpc-fritz-default",
              "Owner": "Fritz"
            },
            "vpc_id": "vpc-0f0d3d70bf56578ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793291932898:route-table/rtb-054595a50ae84b55e",
            "default_route_table_id": "rtb-054595a50ae84b55e",
            "id": "rtb-054595a50ae84b55e",
            "owner_id": "793291932898",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "staging",
              "Name": "vpc-fritz-default",
              "Owner": "Fritz"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "vpc-fritz-default",
              "Owner": "Fritz"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f0d3d70bf56578ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793291932898:security-group/sg-059995bae67648f25",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-059995bae67648f25",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "793291932898",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "vpc-fritz-default",
              "Owner": "Fritz"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "vpc-fritz-default",
              "Owner": "Fritz"
            },
            "vpc_id": "vpc-0f0d3d70bf56578ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cdbf565430943997",
            "domain": "vpc",
            "id": "eipalloc-0cdbf565430943997",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-144-49-62.compute-1.amazonaws.com",
            "public_ip": "54.144.49.62",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "staging",
              "Name": "vpc-fritz-us-east-1a",
              "Owner": "Fritz"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "vpc-fritz-us-east-1a",
              "Owner": "Fritz"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004bb12c8710b8a0e",
            "domain": "vpc",
            "id": "eipalloc-004bb12c8710b8a0e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-223-116-140.compute-1.amazonaws.com",
            "public_ip": "44.223.116.140",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "staging",
              "Name": "vpc-fritz-us-east-1a",
              "Owner": "Fritz"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "vpc-fritz-us-east-1a",
              "Owner": "Fritz"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793291932898:internet-gateway/igw-0ae2997f4208ed1ab",
            "id": "igw-0ae2997f4208ed1ab",
            "owner_id": "793291932898",
            "tags": {
              "Environment": "staging",
              "Name": "vpc-fritz",
              "Owner": "Fritz"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "vpc-fritz",
              "Owner": "Fritz"
            },
            "vpc_id": "vpc-0f0d3d70bf56578ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cdbf565430943997",
            "association_id": "eipassoc-0b274b4d0ee9b6d6a",
            "connectivity_type": "public",
            "id": "nat-0de9da7a4cbc81b1b",
            "network_interface_id": "eni-0c78a05874f1f9171",
            "private_ip": "10.0.101.15",
            "public_ip": "54.144.49.62",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c2fa13d859c27bb0",
            "tags": {
              "Environment": "staging",
              "Name": "vpc-fritz-us-east-1a",
              "Owner": "Fritz"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "vpc-fritz-us-east-1a",
              "Owner": "Fritz"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004bb12c8710b8a0e",
            "association_id": "eipassoc-070debdade80080ca",
            "connectivity_type": "public",
            "id": "nat-0ccf64b3dfd361147",
            "network_interface_id": "eni-02c2d077da6cdeed7",
            "private_ip": "10.0.102.188",
            "public_ip": "44.223.116.140",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f84335fb5a118d3c",
            "tags": {
              "Environment": "staging",
              "Name": "vpc-fritz-us-east-1a",
              "Owner": "Fritz"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "vpc-fritz-us-east-1a",
              "Owner": "Fritz"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08ebca22fc9dc81871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0de9da7a4cbc81b1b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08ebca22fc9dc8187",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-090a85cc6e4c2e8981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ccf64b3dfd361147",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-090a85cc6e4c2e898",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ae2997f4208ed1ab",
            "id": "r-rtb-0684333829b367b0d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0684333829b367b0d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793291932898:route-table/rtb-0187d8e6c64d95091",
            "id": "rtb-0187d8e6c64d95091",
            "owner_id": "793291932898",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "staging",
              "Name": "vpc-fritz-db-us-east-1a",
              "Owner": "Fritz"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "vpc-fritz-db-us-east-1a",
              "Owner": "Fritz"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0d3d70bf56578ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793291932898:route-table/rtb-093723926598e3c09",
            "id": "rtb-093723926598e3c09",
            "owner_id": "793291932898",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "staging",
              "Name": "vpc-fritz-db-us-east-1a",
              "Owner": "Fritz"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "vpc-fritz-db-us-east-1a",
              "Owner": "Fritz"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0d3d70bf56578ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793291932898:route-table/rtb-08ebca22fc9dc8187",
            "id": "rtb-08ebca22fc9dc8187",
            "owner_id": "793291932898",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "staging",
              "Name": "vpc-fritz-private-us-east-1a",
              "Owner": "Fritz"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "vpc-fritz-private-us-east-1a",
              "Owner": "Fritz"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0d3d70bf56578ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793291932898:route-table/rtb-090a85cc6e4c2e898",
            "id": "rtb-090a85cc6e4c2e898",
            "owner_id": "793291932898",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "staging",
              "Name": "vpc-fritz-private-us-east-1a",
              "Owner": "Fritz"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "vpc-fritz-private-us-east-1a",
              "Owner": "Fritz"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0d3d70bf56578ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793291932898:route-table/rtb-0684333829b367b0d",
            "id": "rtb-0684333829b367b0d",
            "owner_id": "793291932898",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "staging",
              "Name": "vpc-fritz-public",
              "Owner": "Fritz"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "vpc-fritz-public",
              "Owner": "Fritz"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0d3d70bf56578ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3f1ad7020a692d2",
            "route_table_id": "rtb-0187d8e6c64d95091",
            "subnet_id": "subnet-00576749bc8495313"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cff0bdab200c9cb",
            "route_table_id": "rtb-093723926598e3c09",
            "subnet_id": "subnet-03189eeb241b25df4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bb9e25aff5a1e5a",
            "route_table_id": "rtb-08ebca22fc9dc8187",
            "subnet_id": "subnet-0ea214c749c22f39a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe3dcd46702c20f3",
            "route_table_id": "rtb-090a85cc6e4c2e898",
            "subnet_id": "subnet-0e44af98e8d915964"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02060c3d92957aab7",
            "route_table_id": "rtb-0684333829b367b0d",
            "subnet_id": "subnet-0c2fa13d859c27bb0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051c372f27a919be7",
            "route_table_id": "rtb-0684333829b367b0d",
            "subnet_id": "subnet-0f84335fb5a118d3c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793291932898:subnet/subnet-00576749bc8495313",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00576749bc8495313",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793291932898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "database-subnets ",
              "Owner": "Fritz"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "database-subnets ",
              "Owner": "Fritz"
            },
            "vpc_id": "vpc-0f0d3d70bf56578ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793291932898:subnet/subnet-03189eeb241b25df4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03189eeb241b25df4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793291932898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "database-subnets ",
              "Owner": "Fritz"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "database-subnets ",
              "Owner": "Fritz"
            },
            "vpc_id": "vpc-0f0d3d70bf56578ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793291932898:subnet/subnet-0ea214c749c22f39a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea214c749c22f39a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793291932898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "private-subnets ",
              "Owner": "Fritz"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "private-subnets ",
              "Owner": "Fritz"
            },
            "vpc_id": "vpc-0f0d3d70bf56578ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793291932898:subnet/subnet-0e44af98e8d915964",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e44af98e8d915964",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793291932898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "private-subnets ",
              "Owner": "Fritz"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "private-subnets ",
              "Owner": "Fritz"
            },
            "vpc_id": "vpc-0f0d3d70bf56578ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793291932898:subnet/subnet-0c2fa13d859c27bb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2fa13d859c27bb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793291932898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "public-subnets",
              "Owner": "Fritz"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "public-subnets",
              "Owner": "Fritz"
            },
            "vpc_id": "vpc-0f0d3d70bf56578ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793291932898:subnet/subnet-0f84335fb5a118d3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f84335fb5a118d3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793291932898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "public-subnets",
              "Owner": "Fritz"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "public-subnets",
              "Owner": "Fritz"
            },
            "vpc_id": "vpc-0f0d3d70bf56578ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:793291932898:vpc/vpc-0f0d3d70bf56578ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e90e4c75ef512f50",
            "default_route_table_id": "rtb-054595a50ae84b55e",
            "default_security_group_id": "sg-059995bae67648f25",
            "dhcp_options_id": "dopt-b71982cc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f0d3d70bf56578ab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-054595a50ae84b55e",
            "owner_id": "793291932898",
            "tags": {
              "Environment": "staging",
              "Name": "vpc-stage",
              "Owner": "Fritz"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "vpc-stage",
              "Owner": "Fritz"
            }
          }
        }
      ]
    }
  ]
}